--- a/openseats/templates/canvas/canvas-sidebar-edit.html
+++ b/openseats/templates/canvas/canvas-sidebar-edit.html
@@ -1,9 +1,33 @@
 <div class="side-space-menubar edit">
 <h4>객체 수정</h4>
 <div id="edit-object" class="mb-3">
-    <select id="select-object" class="form-select mb-3" aria-label=".form-select-lg example">
-    <option selected>객체를 선택하세요</option>
-    </select>
+    <div id="select-object mb-3">
+        객체를 선택하세요.
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-4">
+                      <div class="list-group" id="list-tab" role="tablist">
+                        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Home</a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Profile</a>
+                        <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Messages</a>
+                        <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>
+                      </div>
+                    </div>
+                    <div class="col-8">
+                      <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>
+                        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+                        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="mb-3"></div>
+                <a href="#" class="btn btn-primary">저장</a>
+            </div>
+        </div>
+    </div>
 <button class="btn btn-primary" id="select-all-object">모든 객체 선택</button>
 </div>
 </div>
